fixed /menu layout bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -69,6 +69,7 @@
 @layer base {
   html {
     @apply text-sm;
+    width: 100vw;
   }
   * {
     @apply border-border;
